ruby-defaults (1:2.5~1024) UNRELEASED; urgency=medium

  * debian/rules: call debian/version-check before configure to ensure
    consistent versions numbers, i.e. If Ruby X.Y is the default, then the
    metapackage *must* be versioned as E:X.Y* (E being the epoch).

 -- Antonio Terceiro <terceiro@debian.org>  Sun, 25 Feb 2018 11:00:42 -0300

ruby-defaults (1:2.5~1000grau) experimental; urgency=medium

  * Make Ruby 2.5 the default

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 03 Feb 2018 17:00:40 -0200

ruby-defaults (1:2.5~1) unstable; urgency=medium

  * Upload to unstable
  * Bump Standards-Version to 4.1.3; no changes needed
  * Drop unnecessary Testsuite: header
  * Drop triggers used to help upgrades in the ruby1.8/ruby1.9.1 era; those
    versions are now only in oldoldstable.
  * Specify section `ruby` for ruby-dev and ruby-all-dev

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 01 Feb 2018 08:31:00 -0200

ruby-defaults (1:2.5~0) experimental; urgency=medium

  * Enable building against ruby2.5

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 23 Jan 2018 10:39:53 -0200

ruby-defaults (1:2.3.3) unstable; urgency=medium

  * Rename libtcltk-ruby to ruby-tcltk to be consistent with other ruby
    packages. Keep Provides: libtcltk-ruby for now.
  * debian/copyright: list copyright for all maintainers in the latest years.

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 10 Dec 2016 14:05:00 -0200

ruby-defaults (1:2.3.0+4) unstable; urgency=medium

  * Install ruby.pc symlink only in ruby-dev. (Closes: #820962)

 -- Christian Hofstaedtler <zeha@debian.org>  Thu, 14 Apr 2016 07:11:22 +0000

ruby-defaults (1:2.3.0+3) unstable; urgency=medium

  * Turn `ruby` package into an `Architecture: any` package, too,
    to ease Multi-Arch interpreter issues. Also add missing Multi-Arch
    annotation to ruby-all-dev. Thanks to Helmut Grohne <helmutg@debian.org>.

 -- Christian Hofstaedtler <zeha@debian.org>  Wed, 13 Apr 2016 18:58:32 +0000
