@@ -3,6 +3,10 @@ ruby-defaults (1:2.5~1024) UNRELEASED; urgency=medium
   * debian/rules: call debian/version-check before configure to ensure
     consistent versions numbers, i.e. If Ruby X.Y is the default, then the
     metapackage *must* be versioned as E:X.Y* (E being the epoch).
+  * RubyDebianDev: Provide an upper bound on supported Ruby versions that can
+    be used to prevent installation without a supported Ruby interpreter
+    (Closes: #860747). Note that gem2deb also needs to be updated to be able
+    to use this data.
 
  -- Antonio Terceiro <terceiro@debian.org>  Sun, 25 Feb 2018 11:00:42 -0300
 
